--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "node-fetch": "^1.7.3"
   },
   "devDependencies": {
     "mocha": "^4.1.0",
